--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,1 +1,29 @@
+name: CICD on EC2 instance
+on: 
+  workflow_dispatch:
 
+jobs:
+  deploy:
+     runs-on: instance
+     steps:
+      -  name: checkout code
+         uses: actions/checkout@v2
+         
+      -  name: Login to Docker
+         uses: docker/login-action@v1
+         with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_ACCESS_TOCKEN }}
+            
+      -  name: Pull Docker Images
+         run: |
+            docker pull mihirv21/python1app:1.0
+            docker pull mihirv21/python1app:2.0
+            
+      - name: Remove the Containers
+        run: |
+            docker-compose down
+
+      - name: Start Docker Containers
+        run: |
+          docker-compose up
