--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,8 +22,8 @@ jobs:
             
       - name: Remove the Containers
         run: |
-            docker-compose down
+            docker compose down
 
       - name: Start Docker Containers
         run: |
-          docker-compose up
+          docker compose up
