--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,3 +27,9 @@ jobs:
       - name: Start Docker Containers
         run: |
           docker compose up -d
+          
+      - name: Trigger Deploy Workflow
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          event-type: deploy-trigger
