--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,11 @@ jobs:
          run: |
            docker push mihirv21/python1app:1.0
            docker push mihirv21/python1app:2.0
+    
+      - name: Trigger Deploy Workflow
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          event-type: deploy-trigger
+
       
