--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-        workflow_dispatch
+  workflow_dispatch:
   
 jobs: 
   build-and-push:
@@ -34,10 +34,5 @@ jobs:
            docker push mihirv21/python1app:1.0
            docker push mihirv21/python1app:2.0
     
-      - name: Trigger Deploy Workflow
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          event-type: deploy-trigger
-
+      
       
