--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,13 @@ jobs:
       
       -  name: build images
          run: | 
-           docker compose build
+           docker build -t client .
+           docker build -t server .
       
       -  name: tag the images
          run: | 
-           docker tag react-node-mysql-crud-client:latest mihirv21/python1app:1.0 
-           docker tag react-node-mysql-crud-server:latest mihirv21/python1app:2.0
+           docker tag client:latest mihirv21/python1app:1.0 
+           docker tag server:latest mihirv21/python1app:2.0
 
       -  name: push the images
          run: |
