--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,12 @@
 name: CI for image build 
 
 on:
-  push:
     
   workflow_dispatch:
   
 jobs: 
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: local
 
     steps:
       -  name: checkout code
