--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Start Docker Containers
         run: |
-          docker run --name client mihirv21/python1app:1.0 -p 3000:3000 
-          docker run --name server mihirv21/python1app:2.0 -p 3001:3001 
+          docker run --name -d client mihirv21/python1app:1.0 -p 3000:3000 
+          docker run --name -d server mihirv21/python1app:2.0 -p 3001:3001 
 
      
