--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,7 +30,8 @@ jobs:
 
       - name: Start Docker Containers
         run: |
-          docker run --name  client -d mihirv21/python1app:1.0 -p 3000:3000 
-          docker run --name  server -d mihirv21/python1app:2.0 -p 3001:3001 
+          docker run --name client  -p 3000:3000 mihirv21/python1app:1.0
+          docker run --name server  -p 3001:3001 mihirv21/python1app:2.0
+
 
      
