--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
 name: CI for image build 
 
 on:
-    
-  workflow_dispatch:
+    push:
+        branches: main   
+    workflow_dispatch:
   
 jobs: 
   build-and-push:
