--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,14 @@
   version: '3.8'
   services: 
     client:
-      build:
-        context: client/
-        dockerfile: Dockerfile
+      image: docker pull mihirv21/python1app:1.0
       ports:
       -  3000:3000
       networks:
       - rds_network
 
     server:
-      build: 
-        context: server/
-        dockefile: Dockerfile
+      image: docker pull mihirv21/python1app:2.0
       ports:
       - 3001:3001
       networks:
