--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,18 +1,9 @@
 name: CD on EC2 instance
-on:
+on: 
   workflow_dispatch:
-    inputs:
-      auto-trigger:
-        description: 'Should this deployment be triggered automatically?'
-        required: true
-        default: 'false'
-        type: boolean
-
   repository_dispatch:
-    types: [deploy]
-
-
-
+    types: [deploy-trigger]
+    
 jobs:
   deploy:
      runs-on: instance
@@ -25,21 +16,14 @@ jobs:
          with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_ACCESS_TOCKEN }}
-            
-      -  name: Pull Docker Images
-         run: |
-            docker pull mihirv21/python1app:1.0
-            docker pull mihirv21/python1app:2.0
-            
+                 
       - name: Remove the Containers
         run: |
-            docker rm client -f
-            docker rm server -f
-
+              docker compose down
+           
       - name: Start Docker Containers
         run: |
-          docker run -d --name client  -p 3000:3000 mihirv21/python1app:1.0
-          docker run -d --name server  -p 3001:3001 mihirv21/python1app:2.0
+              docker compose up -d 
 
 
      
