--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,7 +16,11 @@ jobs:
          with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_ACCESS_TOCKEN }}
-                 
+      
+      -  name:  Pull the images
+         run: | 
+            docker compose pull 
+      
       - name: Remove the Containers
         run: |
               docker compose down
