--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: CD on EC2 instance
 on: 
   workflow_dispatch:
   repository_dispatch:
-    types: [deploy-trigger]
+    types: [trigger-deploy]
     
 jobs:
   deploy:
