--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,13 @@
 name: CI for image build 
 
 on:
-    workflow_dispatch:
-   
+  workflow_dispatch:
+    inputs:
+      trigger-deploy:
+        description: 'Trigger deployment workflow'
+        required: true
+        default: 'false'
+        type: boolean
     
   
 jobs: 
@@ -34,6 +39,14 @@ jobs:
          run: |
            docker push mihirv21/python1app:1.0
            docker push mihirv21/python1app:2.0
+
+      - name: Trigger deployment workflow
+        if: github.event.inputs.trigger-deploy == 'true'
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: owner/repository
+          event-type: trigger-deploy
     
       
       
