--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,15 +26,9 @@ jobs:
       
       -  name: build images
          run: | 
-            cd client && docker build -t client .
-
-             docker build -t server .
+            cd client && docker build -t mihirv21/python1app:1.0 .
+            docker build -t mihirv21/python1app:2.0 .
       
-      -  name: tag the images
-         run: | 
-           docker tag client:latest mihirv21/python1app:1.0 
-           docker tag server:latest mihirv21/python1app:2.0
-
       -  name: push the images
          run: |
            docker push mihirv21/python1app:1.0
