--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,1 +1,67 @@
 name: CI/CD 
+on:
+  workflow_dispatch:  # This allows manual triggering of the workflow
+    inputs:
+      deploy:
+        description: 'Deploy the image after building?'
+        required: true
+        default: 'no'
+        type: choice
+        options:
+          - 'no'
+          - 'yes'
+
+
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      -  name: checkout code
+         uses: actions/checkout@v3
+
+      -  name: Docker login
+         uses: docker/login-action@v1
+         with:
+           username: ${{ secrets.DOCKER_USERNAME }}
+           password: ${{ secrets.DOCKER_ACCESS_TOCKEN }}
+      
+      -  name: build images
+         run: | 
+            cd client && docker build -t mihirv21/python1app:1.0 .
+            docker build -t mihirv21/python1app:2.0 .
+      
+      -  name: push the images
+         run: |
+           docker push mihirv21/python1app:1.0
+           docker push mihirv21/python1app:2.0
+               
+  pull-and-run:
+    runs-on: instance
+    needs: build-and-push
+    if: ${{ github.event.inputs.deploy == 'yes' }}
+
+    steps:
+      -  name: checkout code
+         uses: actions/checkout@v2
+         
+      -  name: Login to Docker
+         uses: docker/login-action@v1
+         with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_ACCESS_TOCKEN }}
+
+      -  name: Pull the Images
+         run: |
+               docker compose pull
+    
+      - name: Remove the Containers
+        run: |
+              docker compose down
+           
+      - name: Start Docker Containers
+        run: |
+              docker compose up -d  
+
+
+      
