--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:latest
+FROM node:latest as app
 
 WORKDIR /client
 
@@ -10,6 +10,14 @@ RUN npm install
 
 COPY . ./
 
-EXPOSE 3001
+CMD [ "npm","run","build" ]
 
-CMD [ "npm","start" ]
+FROM nginx:1.23-alpine
+
+WORKDIR /usr/share/nginx/html
+
+COPY --from=app  /client/dist .
+EXPOSE 80 
+
+ENTRYPOINT [ "nginx","-g","daemon off;" ]
+
