--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,7 +16,7 @@ FROM nginx:1.23-alpine
 
 WORKDIR /usr/share/nginx/html
 
-COPY --from=app  /client/dist .
+COPY --from=app  /dist .
 EXPOSE 80 
 
 ENTRYPOINT [ "nginx","-g","daemon off;" ]
