--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,30 @@
   services: 
     client:
       image: mihirv21/python1app:1.0
+      container_name: client
       ports:
-      -  80:80
+      -  3000:3000
       networks:
       - rds_network
 
     server:
       image: mihirv21/python1app:2.0
+      container_name: server
       ports:
       - 3001:3001
       networks:
       - rds_network
+
+    nginx:
+      image: nginx:1.23-alpine
+      contianer_name: nginx
+      volume :
+      -  ./nginx.conf:/etc/nginx/conf.d/nginx.conf
+      ports:
+      - 80:80
+      depends_on:
+      - client
+      - server
 
   networks:
     rds_network:
