--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@
       - rds_network
 
     nginx:
+      image: nginx-a.23-alpine
       contianer_name: nginx
       volume :
       -  ./nginx.conf:/etc/nginx/conf.d/nginx.conf
