--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@
     nginx:
       image: nginx-a.23-alpine
       container_name: nginx
-      volume :
+      volumes:
       -  ./nginx.conf:/etc/nginx/conf.d/nginx.conf
       ports:
       - 80:80
