--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,7 +28,7 @@ jobs:
       
       -  name: build images
          run: | 
-            cd client/ && docker build -t mihirv21/python1app:1.0 .
+            cd client/ && docker build -t mihirv21/python1ap:1.0 .
             cd ..
             cd server/ && docker build -t mihirv21/python1app:2.0 .
       
