--- a/nginx.conf
+++ b/nginx.conf
@@ -3,10 +3,8 @@ server
         listen 80;
 
         location /client {
-            proxy_pass http://client;
+            proxy_pass http:/ip-172-31-22-154.ec2.internal/client;
         }
-        location /server {
-            proxy_pass http://server;
-        }
+        
 
     }
