--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server
         listen 80;
 
         location /client {
-            proxy_pass http:/ip-172-31-22-154.ec2.internal/client;
+            proxy_pass http://ip-172-31-22-154.ec2.internal/client;
         }
         
 
