--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@
       ports:
       -  3000:3000
       volumes:
-      -  ./nginx.conf:/etc/nginx/conf.d/nginx.conf
+      -  ./nginx.conf:/etc/nginx/conf.d/default.conf
       networks:
       - rds_network
 
