--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@
     client:
       image: mihirv21/python1app:1.0
       ports:
-      -  3000:3000
+      -  80:80
       volumes:
-      -  ./nginx.conf:/etc/nginx/conf.d/default.conf
+      -  ./default.conf.conf:/etc/nginx/conf.d/
       networks:
       - rds_network
 
