--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@
       ports:
       -  80:80
       volumes:
-      -  ./default.conf.conf:/etc/nginx/conf.d/
+      -  ./default.conf:/etc/nginx/conf.d/default.conf
       networks:
       - rds_network
 
