--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -17,6 +17,9 @@ FROM nginx:1.23-alpine
 WORKDIR /usr/share/nginx/html
 
 COPY --from=app  /client/dist .
+
+COPY default.conf /etc.nginx/conf.d/default.conf
+
 EXPOSE 80 
 
 ENTRYPOINT [ "nginx","-g","daemon off;" ]
