--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@
       image: mihirv21/python1app:1.0
       ports:
       -  80:80
-      volumes:
-      -  ./default.conf:/etc/nginx/conf.d/default.conf
+      # volumes:
+      # -  ./default.conf:/etc/nginx/conf.d/default.conf
       networks:
       - rds_network
 
