--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,11 +31,16 @@ jobs:
             cd client/ && docker build -t mihirv21/python1app:1.0 .
             cd ..
             cd server/ && docker build -t mihirv21/python1app:2.0 .
+            cd ..
+            docker pull nginx:1-23-alpine
+            docker tag nginx:1-23-alpine mihirv21/python1app:3.0
+
       
       -  name: push the images
          run: |
            docker push mihirv21/python1app:1.0
            docker push mihirv21/python1app:2.0
+           docker push mihirv21/python1app:3.0
                
   pull-and-run:
     runs-on: instance
