--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@
     client:
       image: mihirv21/python1app:1.0
       ports:
-      -  3000:80
+      -  3000:3000
       # volumes:
       # -  ./default.conf:/etc/nginx/conf.d/default.conf
       networks:
@@ -16,8 +16,15 @@
       networks:
       - rds_network
 
-    
-
+    nginx:
+      image: mihirv21/python1app:3.0
+      volumes: 
+      - ./client/default.conf:/etc/nginx/conf.d/default.conf
+      ports:
+        80:80
+      networks:
+      -  rds_network
+      
   networks:
     rds_network:
       external: true
