--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,7 +32,7 @@ jobs:
             cd ..
             cd server/ && docker build -t mihirv21/python1app:2.0 .
             cd ..
-            docker pull nginx:1-23-alpine
+            docker pull nginx:1.23-alpine
             docker tag nginx:1-23-alpine mihirv21/python1app:3.0
 
       
