--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,7 +33,7 @@ jobs:
             cd server/ && docker build -t mihirv21/python1app:2.0 .
             cd ..
             docker pull nginx:1.23-alpine
-            docker tag nginx:1-23-alpine mihirv21/python1app:3.0
+            docker tag nginx:1.23-alpine mihirv21/python1app:3.0
 
       
       -  name: push the images
