--- a/client/default.conf
+++ b/client/default.conf
@@ -4,7 +4,7 @@ server
         listen 80;
 
         location /client {
-            proxy_pass http://54.88.99.156/client;
+            proxy_pass http://54.88.99.156;
         }
         
 
