--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@
     nginx:
       image: mihirv21/python1app:3.0
       volumes: 
-      - ./client/dist/index.html:/usr/share/nginx/html
+      - ./client/dist/index.html:/usr/share/nginx/html/index.html
       - ./client/default.conf:/etc/nginx/conf.d/default.conf
       ports:
       -  80:80
