--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@
     nginx:
       image: mihirv21/python1app:3.0
       volumes: 
+      - ./client/dist/.:usr/share/nginx/html
       - ./client/default.conf:/etc/nginx/conf.d/default.conf
       ports:
       -  80:80
