--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,6 +16,8 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
+      -  name: checkout code
+         uses: actions/checkout@v3     
       
       -  name: Docker login
          uses: docker/login-action@v1
@@ -31,7 +33,9 @@ jobs:
             cd ..
             docker pull nginx:1.23-alpine
             docker tag nginx:1.23-alpine mihirv21/python1app:3.0
-
+            
+      -  name: checkout code
+         uses: actions/checkout@v3     
             
       -  name: checkout code
          uses: actions/checkout@v3     
