--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,6 +10,15 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build  
+RUN npm run build
 
-CMD [ "npm","start" ]
+CMD ["npm","start"]
+
+FROM nginx:1.23-alpine
+WORKDIR /usr/share/nginx/html
+
+COPY --from=app  /client/dist .
+EXPOSE 80 
+
+ENTRYPOINT [ "nginx","-g","daemon off;" ]
+
