--- a/client/default.conf
+++ b/client/default.conf
@@ -3,7 +3,7 @@ server
     {
         listen 80;
 
-        location /client {
+        location {
             proxy_pass http://54.88.99.156:3000;
         }
         
