--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@
     nginx:
       image: mihirv21/python1app:3.0
       volumes: 
-      - ./client/default.conf:/etc/nginx/conf.d/default.conf
+      - /client/default.conf:/etc/nginx/conf.d/default.conf
       ports:
       -  80:80
       networks:
