--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -14,6 +14,6 @@ RUN npm run build
 
 CMD ["npm","start"]
 
-FROM nginx:mihirv21/python1app
+FROM nginx:mihirv21/python1app:3.0
 
 ENTRYPOINT [ "nginx","-g","daemon off;" ]
