--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,8 @@
       - rds_network
 
     nginx:
-      image: mihirv21/python1app:3.0
+      volumes:
+      -  ./default.conf:/etc/nginx/conf.d/default.conf
       ports:
       -  80:80
       networks:
