--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,11 +31,9 @@ jobs:
             cd ..
             cd server/ && docker build -t mihirv21/python1app:2.0 .
             cd ..
-           
-      - name: tag image
-        run: |
-              docker pull nginx:1.23-alpine
-              docker tag nginx:1.23-alpine mihirv21/python1app:3.0
+            cd Nginx/ && docker build -t mihirv21/python1app:3.0 .
+            cd ..
+            
             
          
       -  name: push the images
