--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,1 +1,13 @@
 
+
+server 
+    {
+        listen 80;
+
+        location {
+            proxy_pass http://54.88.99.156:3000;
+        }
+        
+
+    }
+
