--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx:1.23-alpine
-EXPOSe 80
+EXPOSE 80
+COPY default.conf /etc/nginx/conf.d/default.conf
 ENTRYPOINT [ "nginx", "-g", "daemon off;" ]
