--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,20 @@
+upstream frontend { 
+        server 3.89.162.108:3000;
+}
+upstream backend{
+    server 3.89.162.108:3001;
+}
 
 
 server 
     {
         listen 80;
-
-        location {
-            proxy_pass http://54.88.99.156:3000;
+        server_name 3.89.162.108;
+        location /clien {
+            proxy_pass http://frontend;
         }
-        
+        location /Myserver {
+            proxy_pass http://backend;
+        }
 
     }
-
