--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,20 @@
 upstream frontend { 
-        server 3.89.162.108:3000;
-}
-upstream backend{
-    server 3.89.162.108:3001;
+    server client:3000;
 }
 
+upstream backend {
+    server server:3001;
+}
 
-server 
-    {
-        listen 80;
-        server_name 3.89.162.108;
-        location /clien {
-            proxy_pass http://frontend;
-        }
-        location /Myserver {
-            proxy_pass http://backend;
-        }
+server {
+    listen 80;
+    server_name 3.89.162.108;
 
+    location /client {
+        proxy_pass http://frontend;
     }
+
+    location /myserver {
+        proxy_pass http://backend;
+    }
+}
