--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,9 @@
 upstream frontend { 
-    server client:3000;
+    server 3.89.162.108:3000;
 }
 
 upstream backend {
-    server server:3001;
+    server 3.89.162.108:3001;
 }
 
 server {
