--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,7 +10,7 @@ server {
     listen 80;
     server_name 3.89.162.108;
 
-    location /client {
+    location /front {
         proxy_pass http://frontend;
     }
 
