--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,13 +8,13 @@ upstream backend {
 
 server {
     listen 80;
-    server_name 3.89.162.108;
+    server_name localhost;
 
     location /front {
-        proxy_pass http://frontend;
+        proxy_pass http:http://frontend;
     }
 
     location /myserver {
-        proxy_pass http://backend;
+        proxy_pass http://http://backend;
     }
 }
