--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,10 +10,10 @@ server {
     listen 80;
 
     location /front {
-        proxy_pass http:http://frontend;
+        proxy_pass http://frontend;
     }
 
     location /myserver {
-        proxy_pass http://http://backend;
+        proxy_pass http://backend;
     }
 }
