--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,19 @@
 upstream frontend { 
-    server 3.89.162.108:3000;
+    server localhost;
 }
 
 upstream backend {
-    server 3.89.162.108:3001;
+    server localhost;
 }
 
 server {
     listen 80;
 
     location /front {
-        proxy_pass http://frontend;
+        proxy_pass http://3.89.162.108:3000/frontend;
     }
 
     location /myserver {
-        proxy_pass http://backend;
+        proxy_pass http://3.89.162.108:3001/backend;
     }
 }
