--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,12 @@
-upstream frontend { 
-    server localhost;
-}
-
-upstream backend {
-    server localhost;
-}
 
 server {
     listen 80;
-
+    server_name localhost;
     location /front {
-        proxy_pass http://3.89.162.108:3000/frontend;
+        proxy_pass http://3.89.162.108:3000;
     }
 
     location /myserver {
-        proxy_pass http://3.89.162.108:3001/backend;
+        proxy_pass http://3.89.162.108:3001;
     }
 }
