--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 
 server {
     listen 80;
-    server_name localhost;
+    server_name 3.89.162.108;
     location /front {
         proxy_pass http://3.89.162.108:3000;
     }
