--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,12 +8,13 @@ COPY package-lock.json .
 
 RUN npm install
 
-RUN npm run build
-
-
 COPY . ./
 
+RUN npm run build
+
 RUN rm -rf /client/dist/assets
+
+COPY . .
 
 CMD ["npm","start"]
 
