--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:1.23-alpine
+FROM nginx:latest
 EXPOSE 80
 COPY default.conf /etc/nginx/conf.d/default.conf
 CMD [ "nginx", "-g", "daemon off;" ]
