--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,20 @@
+upstream frontend {
+    server 3.89.162.108:3000;
+}
 
+upstream backend {
+    server 3.89.162.108:3001;
+}
 server {
     listen 80;
     server_name 3.89.162.108;
     
     location /front {
         
-        proxy_pass http://3.89.162.108:3000/;
+        proxy_pass http://frontend;
     }
 
     location /myserver {
-        proxy_pass http://3.89.162.108:3000/;
+        proxy_pass http://backend;
     }
 }
