--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,9 @@
 upstream frontend {
-    server 3.89.162.108:3000/;
+    server 3.89.162.108:3000;
 }
 
 upstream backend {
-    server 3.89.162.108:3001/;
+    server 3.89.162.108:3001;
 }
 server {
     listen 80;
