--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,10 +4,10 @@ server {
     
     location /front {
         
-        proxy_pass http://3.89.162.108:3000/;
+        proxy_pass http://3.89.162.108:3000;
     }
 
     location /myserver {
-        proxy_pass http://3.89.162.108:3001/;
+        proxy_pass http://3.89.162.108:3001;
     }
 }
