--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@ server {
     
     location /front/ {
         
-        proxy_pass http://3.89.162.108:3000/;
+        proxy_pass http://3.89.162.108:3000/index.html;
     }
 
     location /myserver/ {
