--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,12 +2,12 @@ server {
     listen 80;
     server_name 3.89.162.108;
     
-    location /front/ {
+    location /front {
         
         proxy_pass http://3.89.162.108:3000/;
     }
 
-    location /myserver/ {
+    location /myserver {
         proxy_pass http://3.89.162.108:3001/;
     }
 }
