--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,10 +2,10 @@ server {
     listen 80;
     server_name 3.89.162.108;
     
-    //location /front/ {
-      //  
-     //   proxy_pass http://3.89.162.108:3000/;
-    //}
+    location /front/ {
+        
+        proxy_pass http://3.89.162.108:3000/;
+    }
 
     location /myserver/ {
         proxy_pass http://3.89.162.108:3001/;
