--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,6 @@
 FROM nginx:latest
 EXPOSE 80
 COPY default.conf /etc/nginx/conf.d/default.conf
+WORKDIR /client
+COPY . .
 CMD [ "nginx", "-g", "daemon off;" ]
