--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name 3.89.162.108;
+    server_name _;
     
-    location /front/ {
+    location / {
         proxy_pass http://3.89.162.108:3000/;
     }
 
