--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@
   services: 
     client:
       image: mihirv21/python1app:1.0
+      container_name: client
+      hostname: client
       ports:
       -  3000:3000
       networks:
@@ -9,6 +11,8 @@
 
     server:
       image: mihirv21/python1app:2.0
+      container_name: server
+      hostname: server
       ports:
       - 3001:3001
       networks:
@@ -16,6 +20,7 @@
 
     nginx:
       image: mihirv21/python1app:3.0
+      container_name: nginx
       ports:
       -  80:80
       depends_on:
