--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:latest
 EXPOSE 80
-COPY default.conf /etc/nginx/conf.d/default.conf
+#COPY default.conf /etc/nginx/conf.d/default.conf
+COPY default.conf /etc/nginx/nginx.conf
 CMD [ "nginx", "-g", "daemon off;" ]
