--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,5 @@
+events{}
+http{
 server {
     listen 80;
     server_name _;
@@ -9,4 +11,5 @@ server {
     location /myserver/ {
         proxy_pass http://3.89.162.108:3001/;
     }
+}
 }
