--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ events{}
 http{
 server {
     listen 80;
-    server_name _;
+    server_name 3.89.162.108;
     
     location / {
         proxy_pass http://3.89.162.108:3000/;
